--- a/LanchesMac_ProjMVC_Gauss/LanchesMac_ProjMVC_Gauss/LanchesMac_ProjMVC_Gauss.csproj
+++ b/LanchesMac_ProjMVC_Gauss/LanchesMac_ProjMVC_Gauss/LanchesMac_ProjMVC_Gauss.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
@@ -20,6 +20,18 @@
     <Content Remove="wwwroot\images\pexels-valeria-boltneva-1199957.jpg" />
     <Content Remove="wwwroot\images\pexels-valeria-boltneva-9406088 %282%29.jpg" />
     <Content Remove="wwwroot\images\pexels-valeria-boltneva-9406088.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
