--- a/LanchesMac_ProjMVC_Gauss/LanchesMac_ProjMVC_Gauss/appsettings.json
+++ b/LanchesMac_ProjMVC_Gauss/LanchesMac_ProjMVC_Gauss/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=desktop-//sqlexpress;Initial Catalog=LanchesDatabase;Integrated Security=True"
+    "DefaultConnection": "Data Source=(localdb)DESKTOP-QJ5AC3E//mssqllocaldb;Initial Catalog=LanchesDatabase;Integrated Security=True;Trusted_Connection=True;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
